[metadata]
name = IonStats
version = 0.1.0
author = Yrjö Koski
description = A tool for collecting and comparing nanopore sequencing statistics.
license = GPLv3
url = https://github.com/ykoski/ionstats
long_desription = file: README.md
long_desription_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    uncalled4
    pandas
    numpy
    scipy
    pysam
    PyYAML

[options.entry_points]
console_scripts = 
    ionstats = src.ionstats:main
